# pasteplus

./: .gitignore  README.md  index.html  package-lock.json  package.json  user_manual.md  vite.config.js
src/: App.jsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs  state.rs
src-tauri/src/clipboard/: mod.rs  wayland.rs  x11.rs
